feat: add filter logic